--- a/grncontrolpanel.ui
+++ b/grncontrolpanel.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>420</height>
+    <width>392</width>
+    <height>460</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -32,7 +32,7 @@ QGroupBox::title {
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>10</y>
+      <y>80</y>
       <width>340</width>
       <height>150</height>
      </rect>
@@ -94,10 +94,10 @@ QGroupBox::title {
    <widget class="QGroupBox" name="VisulizationGroupBox">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>180</y>
+      <x>20</x>
+      <y>250</y>
       <width>340</width>
-      <height>161</height>
+      <height>141</height>
      </rect>
     </property>
     <property name="title">
@@ -174,13 +174,52 @@ QGroupBox::title {
      </layout>
     </widget>
    </widget>
+   <widget class="QGroupBox" name="groupBox">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>0</y>
+      <width>341</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>Choose file</string>
+    </property>
+    <widget class="QWidget" name="">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>30</y>
+       <width>321</width>
+       <height>29</height>
+      </rect>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <item>
+       <widget class="QLineEdit" name="InputFileNameField"/>
+      </item>
+      <item>
+       <widget class="QPushButton" name="inputFileChooseButton">
+        <property name="text">
+         <string>Choose</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </widget>
+   <zorder>AlgorithmGroupBox</zorder>
+   <zorder>VisulizationGroupBox</zorder>
+   <zorder>OpenVisulizationButton</zorder>
+   <zorder>groupBox</zorder>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>400</width>
+     <width>392</width>
      <height>25</height>
     </rect>
    </property>
