--- a/visulizationwindow.ui
+++ b/visulizationwindow.ui
@@ -127,6 +127,52 @@ QGroupBox::title {
      </widget>
     </widget>
    </widget>
+   <widget class="QWidget" name="widget_2" native="true">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>340</y>
+      <width>451</width>
+      <height>201</height>
+     </rect>
+    </property>
+    <widget class="QGroupBox" name="FigurePropertyGroupBox">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>0</y>
+       <width>431</width>
+       <height>201</height>
+      </rect>
+     </property>
+     <property name="title">
+      <string>Property Editor - Figure</string>
+     </property>
+     <widget class="QLabel" name="label">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>20</y>
+        <width>161</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Current Layout Style</string>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="comboBoxLayout">
+      <property name="geometry">
+       <rect>
+        <x>200</x>
+        <y>20</y>
+        <width>161</width>
+        <height>21</height>
+       </rect>
+      </property>
+     </widget>
+    </widget>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="VisulizationMenubar">
    <property name="geometry">
