--- a/grncontrolpanel.ui
+++ b/grncontrolpanel.ui
@@ -103,17 +103,17 @@ QGroupBox::title {
     <property name="title">
      <string>Visulization Layout</string>
     </property>
-    <widget class="QPushButton" name="OpenVisulizationButton">
+    <widget class="Line" name="line">
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>100</y>
-       <width>131</width>
-       <height>31</height>
+       <y>70</y>
+       <width>321</width>
+       <height>16</height>
       </rect>
      </property>
-     <property name="text">
-      <string>Generate Network</string>
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
      </property>
     </widget>
     <widget class="QWidget" name="">
@@ -168,6 +168,45 @@ QGroupBox::title {
        <widget class="QRadioButton" name="circo">
         <property name="text">
          <string>circo</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+    <widget class="QWidget" name="">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>90</y>
+       <width>311</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <item>
+       <widget class="QPushButton" name="OpenVisulizationButton">
+        <property name="text">
+         <string>Generate Network</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <spacer name="horizontalSpacer">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButtonExit">
+        <property name="text">
+         <string>Cancel</string>
         </property>
        </widget>
       </item>
