--- a/visulizationwindow.ui
+++ b/visulizationwindow.ui
@@ -148,28 +148,107 @@ QGroupBox::title {
      <property name="title">
       <string>Property Editor - Figure</string>
      </property>
-     <widget class="QLabel" name="label">
+     <widget class="Line" name="line">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>60</y>
+        <width>411</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_2">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>80</y>
+        <width>71</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Node Shape</string>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="comboBoxNodeShapes">
+      <property name="geometry">
+       <rect>
+        <x>140</x>
+        <y>80</y>
+        <width>87</width>
+        <height>27</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QWidget" name="">
       <property name="geometry">
        <rect>
         <x>20</x>
         <y>20</y>
-        <width>161</width>
+        <width>241</width>
         <height>31</height>
        </rect>
       </property>
-      <property name="text">
-       <string>Current Layout Style</string>
-      </property>
-     </widget>
-     <widget class="QComboBox" name="comboBoxLayout">
-      <property name="geometry">
-       <rect>
-        <x>200</x>
-        <y>20</y>
-        <width>161</width>
-        <height>21</height>
-       </rect>
-      </property>
+      <layout class="QHBoxLayout" name="horizontalLayout_2">
+       <item>
+        <widget class="QLabel" name="label">
+         <property name="text">
+          <string>Current Layout Style</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <widget class="QComboBox" name="comboBoxLayout">
+         <item>
+          <property name="text">
+           <string>dot</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>neato</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>fdp</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>sfdp</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>twopi</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>circo</string>
+          </property>
+         </item>
+        </widget>
+       </item>
+      </layout>
      </widget>
     </widget>
    </widget>
