--- a/visulizationwindow.ui
+++ b/visulizationwindow.ui
@@ -233,7 +233,7 @@ QGroupBox::title {
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
         <x>20</x>
