--- a/grncontrolpanel.old.ui
+++ b/grncontrolpanel.old.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>405</width>
-    <height>386</height>
+    <width>392</width>
+    <height>460</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>GRN Visualization Control Panel</string>
+   <string>GRN Control Panel</string>
   </property>
   <property name="styleSheet">
    <string notr="true">QGroupBox {
@@ -28,23 +28,86 @@ QGroupBox::title {
 </string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QGroupBox" name="VisulizationGroupBox">
+   <widget class="QGroupBox" name="AlgorithmGroupBox">
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>100</y>
-      <width>351</width>
-      <height>201</height>
+      <y>80</y>
+      <width>340</width>
+      <height>150</height>
      </rect>
     </property>
     <property name="title">
-     <string>Visualization Layout</string>
+     <string>Algorithm</string>
+    </property>
+    <widget class="QWidget" name="">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>20</y>
+       <width>321</width>
+       <height>121</height>
+      </rect>
+     </property>
+     <layout class="QGridLayout" name="gridLayout_3">
+      <item row="1" column="0">
+       <widget class="QCheckBox" name="Elastic">
+        <property name="mouseTracking">
+         <bool>true</bool>
+        </property>
+        <property name="text">
+         <string>Elastic Network</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QCheckBox" name="Lasso">
+        <property name="text">
+         <string>Lasso</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QCheckBox" name="RidgeRegression">
+        <property name="text">
+         <string>Ridge Regression</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0" colspan="2">
+       <widget class="QCheckBox" name="DBN">
+        <property name="text">
+         <string>Dynamic Bayesian Networks</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0">
+       <widget class="QCheckBox" name="RandomForest">
+        <property name="text">
+         <string>Random Forests</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </widget>
+   <widget class="QGroupBox" name="VisulizationGroupBox">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>250</y>
+      <width>340</width>
+      <height>141</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>Visulization Layout</string>
     </property>
     <widget class="Line" name="line">
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>130</y>
+       <y>70</y>
        <width>321</width>
        <height>16</height>
       </rect>
@@ -53,13 +116,13 @@ QGroupBox::title {
       <enum>Qt::Horizontal</enum>
      </property>
     </widget>
-    <widget class="QWidget" name="layoutWidget">
+    <widget class="QWidget" name="">
      <property name="geometry">
       <rect>
        <x>10</x>
        <y>20</y>
-       <width>331</width>
-       <height>101</height>
+       <width>335</width>
+       <height>48</height>
       </rect>
      </property>
      <layout class="QGridLayout" name="gridLayout_4">
@@ -110,11 +173,11 @@ QGroupBox::title {
       </item>
      </layout>
     </widget>
-    <widget class="QWidget" name="layoutWidget">
+    <widget class="QWidget" name="">
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>150</y>
+       <y>90</y>
        <width>311</width>
        <height>31</height>
       </rect>
@@ -154,15 +217,15 @@ QGroupBox::title {
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>10</y>
-      <width>351</width>
+      <y>0</y>
+      <width>341</width>
       <height>71</height>
      </rect>
     </property>
     <property name="title">
      <string>Choose file</string>
     </property>
-    <widget class="QWidget" name="layoutWidget">
+    <widget class="QWidget" name="">
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -185,6 +248,20 @@ QGroupBox::title {
      </layout>
     </widget>
    </widget>
+   <zorder>AlgorithmGroupBox</zorder>
+   <zorder>VisulizationGroupBox</zorder>
+   <zorder>OpenVisulizationButton</zorder>
+   <zorder>groupBox</zorder>
+  </widget>
+  <widget class="QMenuBar" name="menuBar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>392</width>
+     <height>25</height>
+    </rect>
+   </property>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
    <attribute name="toolBarArea">
@@ -195,31 +272,6 @@ QGroupBox::title {
    </attribute>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
-  <action name="actionOpen">
-   <property name="text">
-    <string>Open</string>
-   </property>
-  </action>
-  <action name="actionExit">
-   <property name="text">
-    <string>Exit</string>
-   </property>
-  </action>
-  <action name="actionSave_as">
-   <property name="text">
-    <string>Save as</string>
-   </property>
-  </action>
-  <action name="actionExit_2">
-   <property name="text">
-    <string>Exit</string>
-   </property>
-  </action>
-  <action name="action_Exitpanel">
-   <property name="text">
-    <string>&amp;Exit</string>
-   </property>
-  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
